dsc/test/corpus/directives.txt
================================================================================
Nested !ifdef/!else chain with DEFINE macros (OvmfPkg/OvmfPkgX64.dsc)
================================================================================

[Defines]
!ifdef $(FD_SIZE_1MB)
  DEFINE FD_SIZE_IN_KB           = 1024
!else
!ifdef $(FD_SIZE_2MB)
  DEFINE FD_SIZE_IN_KB           = 2048
!else
  DEFINE FD_SIZE_IN_KB           = 4096
!endif
!endif

--------------------------------------------------------------------------------

(source_file
  (section
    (section_header
      (tag
        (tag_segment
          (identifier))))
    (ifdef_directive
      (field
        (compound_word
          (macro_invocation
            (identifier)))))
    (define_statement
      (identifier)
      (value
        (raw_text)))
    (else_directive)
    (ifdef_directive
      (field
        (compound_word
          (macro_invocation
            (identifier)))))
    (define_statement
      (identifier)
      (value
        (raw_text)))
    (else_directive)
    (define_statement
      (identifier)
      (value
        (raw_text)))
    (endif_directive)
    (endif_directive)))

================================================================================
!if with parenthesized OR of macro comparisons, and a plain != comparison
(OvmfPkg/OvmfPkgX64.dsc)
================================================================================

[PcdsFixedAtBuild]
!if ($(FD_SIZE_IN_KB) == 1024) || ($(FD_SIZE_IN_KB) == 2048)
  gEfiMdeModulePkgTokenSpaceGuid.PcdMaxVariableSize|0x2000
!endif
!if $(TOOL_CHAIN_TAG) != "XCODE5" && $(TOOL_CHAIN_TAG) != "CLANGPDB"
  gEfiMdeModulePkgTokenSpaceGuid.PcdMaxAuthVariableSize|0x2800
!endif

--------------------------------------------------------------------------------

(source_file
  (section
    (section_header
      (tag
        (tag_segment
          (identifier))))
    (if_directive
      (binary_expression
        (parenthesized_expression
          (binary_expression
            (field
              (compound_word
                (macro_invocation
                  (identifier))))
            (field
              (compound_word
                (bare_word)))))
        (parenthesized_expression
          (binary_expression
            (field
              (compound_word
                (macro_invocation
                  (identifier))))
            (field
              (compound_word
                (bare_word)))))))
    (statement
      (field
        (compound_word
          (bare_word)))
      (pipe_field
        (bare_word)))
    (endif_directive)
    (if_directive
      (binary_expression
        (binary_expression
          (field
            (compound_word
              (macro_invocation
                (identifier))))
          (field
            (string)))
        (binary_expression
          (field
            (compound_word
              (macro_invocation
                (identifier))))
          (field
            (string)))))
    (statement
      (field
        (compound_word
          (bare_word)))
      (pipe_field
        (bare_word)))
    (endif_directive)))

================================================================================
!elseif chain comparing a quoted-string macro value (CryptoPkg/CryptoPkgMbedTls.dsc)
================================================================================

[LibraryClasses]
!if "$(CRYPTO_SERVICES)" == "NONE"
  BaseCryptLib|CryptoPkg/Library/BaseCryptLibNull/BaseCryptLibNull.inf
!elseif "$(CRYPTO_SERVICES)" == "MIN_PEI"
  BaseCryptLib|CryptoPkg/Library/BaseCryptLibMbedTls/PeiCryptLib.inf
!else
  BaseCryptLib|CryptoPkg/Library/BaseCryptLibMbedTls/BaseCryptLib.inf
!endif

--------------------------------------------------------------------------------

(source_file
  (section
    (section_header
      (tag
        (tag_segment
          (identifier))))
    (if_directive
      (binary_expression
        (field
          (string))
        (field
          (string))))
    (statement
      (field
        (compound_word
          (bare_word)))
      (pipe_field
        (bare_word)))
    (elseif_directive
      (binary_expression
        (field
          (string))
        (field
          (string))))
    (statement
      (field
        (compound_word
          (bare_word)))
      (pipe_field
        (bare_word)))
    (else_directive)
    (statement
      (field
        (compound_word
          (bare_word)))
      (pipe_field
        (bare_word)))
    (endif_directive)))

================================================================================
!error with a plain-text message (EmulatorPkg/EmulatorPkg.dsc)
================================================================================

[Defines]
!if $(FORCE_MINGW_HOST_BUILD) == FALSE
    !error EmulatorPkg not supported for Mingw/VS20xx builds
!endif

--------------------------------------------------------------------------------

(source_file
  (section
    (section_header
      (tag
        (tag_segment
          (identifier))))
    (if_directive
      (binary_expression
        (field
          (compound_word
            (macro_invocation
              (identifier))))
        (field
          (compound_word
            (bare_word)))))
    (error_directive
      (value
        (raw_text)))
    (endif_directive)))

================================================================================
!include (OvmfPkg/OvmfPkgX64.dsc)
================================================================================

[Defines]
!include OvmfPkg/Include/Dsc/OvmfTpmDefines.dsc.inc

--------------------------------------------------------------------------------

(source_file
  (section
    (section_header
      (tag
        (tag_segment
          (identifier))))
    (include_directive
      (field
        (compound_word
          (bare_word))))))
